fix PainelSection alignment

--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
+  --gray-70: #748494;
   --gray-80: #405261;
+  --label: #000000;
+  --sublabel: #92959E;
 }
 
 a {
